--- a/api/package.json
+++ b/api/package.json
@@ -6,17 +6,19 @@
     "pretest": "jshint ."
   },
   "dependencies": {
+    "async": "^1.5.0",
     "compression": "^1.3.0",
     "errorhandler": "^1.3.2",
     "formidable": "^1.0.17",
     "json-mask": "^0.3.4",
-    "lodash": "^2.4.1",
+    "lodash": "^2.4.2",
     "loopback": "^2.17.2",
     "loopback-boot": "^2.6.3",
     "loopback-component-storage": "^1.3.1",
     "loopback-connector-mongodb": "^1.8.0",
     "loopback-datasource-juggler": "^2.26.3",
-    "serve-favicon": "^2.2.0"
+    "serve-favicon": "^2.2.0",
+    "tree-model": "^1.0.4"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.6.4"
